tests/NormalTests/paczka1/small_fuzzy/41291864.err
Error in line 2: E2pZCrU0 A421 0,?
Error in line 3: 21pyWsZMkVO S499 76,4
Error in line 1: E2pZCrU0 A421 45,5
